--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Just the Docs general settings.
-# color_scheme: dark
+color_scheme: dark
 
 # Jekyll general settings.
 remote_theme: just-the-docs/just-the-docs
